--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,22 @@
 # ===========================
-# Terra Scout Environment
+# Terra Scout Configuration
 # ===========================
 
 # Environment
 ENVIRONMENT=development
 DEBUG=true
 
-# Java
-JAVA_HOME=C:\Program Files\OpenJDK\jdk-1.8.0_472
+# Java (21 LTS)
+JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-21.0.x.x-hotspot
 
-# MineRL
-MINERL_DATA_ROOT=~/.minerl
+# Minecraft Server
+MC_HOST=localhost
+MC_PORT=25565
+MC_VERSION=1.21.1
+
+# Bot API
+BOT_API_URL=http://localhost:3000
+BOT_WS_URL=ws://localhost:3001
 
 # Training
 TRAINING_DEVICE=cuda
@@ -19,7 +25,3 @@ TRAINING_SEED=42
 # Logging
 LOG_LEVEL=INFO
 TENSORBOARD_LOG_DIR=training/logs
-
-# Kaggle (optional)
-KAGGLE_USERNAME=your_username
-KAGGLE_KEY=your_api_key
