feat: Phase 6 Smart Diamond Hunting & Safety + Doc Updates

--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,11 @@ wandb/
 mlruns/
 
 # ===========================
+# Minecraft Server
+# ===========================
+server/
+
+# ===========================
 # MineRL Specific
 # ===========================
 MineRLEnv/
